Bug 315619 - paging by page in list of files by clicking in trough skips row
Summary: paging by page in list of files by clicking in trough skips row
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: 2.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-22 10:58 UTC by ceolesen
Modified: 2013-03-11 17:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ceolesen 2013-02-22 10:58:15 UTC
Paging by page in list of files by clicking in trough skips row


Reproducible: Always

Steps to Reproduce:
1. open dolphin in a directory of many files in details mode
2. click in the trough (next to the slider)
3. observe that a row is skipped
Actual Results:  
A row is skipped

Expected Results:  
No row should be skipped.
Behavior should be the same as that of the PgUp and PgDn keys.
The Pg Up/Dn keys do not skip a row. On the contrary they leave a row.
Comment 1 Frank Reininghaus 2013-02-28 18:06:10 UTC
Thanks for the report, I can confirm the issue. I think I've found a way to fix it:
https://git.reviewboard.kde.org/r/109210/
Comment 2 Frank Reininghaus 2013-03-11 17:26:47 UTC
Git commit 6ba70a6fbf64ac1d3534e9d9affdd9b399894087 by Frank Reininghaus.
Committed on 11/03/2013 at 18:18.
Pushed by freininghaus into branch 'KDE/4.10'.

Do not skip rows in when clicking the empty area of the scroll bar

The height of the header widget must be subtracted from the view's
height in Details View to determine the "pageStep" for the scroll bar.
FIXED-IN: 4.10.2
REVIEW: 109210

M  +3    -1    dolphin/src/kitemviews/kitemlistcontainer.cpp
M  +9    -0    dolphin/src/kitemviews/kitemlistview.cpp
M  +6    -0    dolphin/src/kitemviews/kitemlistview.h

http://commits.kde.org/kde-baseapps/6ba70a6fbf64ac1d3534e9d9affdd9b399894087